--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -188,7 +188,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                                    <table class="table table-striped table-hover table-bordered" id="tableExport" style="width:100%;">
                                             <thead>
                                                 <tr>
                                                     <th>Sr No.</th>
@@ -235,7 +235,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table class="table table-striped table-hover" id="tableExportsss" style="width:100%;">
+                                    <table class="table table-striped table-hover table-bordered" id="tableExportsss" style="width:100%;">
                                         <thead>
                                             <tr>
                                                 <th>Sr No.</th>
@@ -279,7 +279,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table class="table table-striped table-hover" id="tableExportsss" style="width:100%;">
+                                    <table class="table table-striped table-hover table-bordered" id="tableExportsss" style="width:100%;">
                                         <thead>
                                             <tr>
                                                 <th>Team</th>
