--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -55,7 +55,7 @@
             <section id="dashboard-analytics">
 
 
-
+                @Html.HiddenFor(m=> m.ImageURL)
                 @*===============================================================================*@
 
                 <div class="row ">
@@ -64,8 +64,17 @@
                             <div class="card-statistic-3">
                                 <div class="card-content d-flex align-items-center">
                                     @*<img src="~/assetsAdmin/img/silver.png" />*@
-                                    <img src="@ViewBag.ImageURL" height="100" width="100" />
-                                    <h4 class="card-title pl-3 mb-0" style="color:#024a54">@ViewBag.AchiverRank</h4>
+
+                                    @if (Model.ImageURL == "null" || Model.ImageURL == "" || Model.AchiverRank == "null" || Model.AchiverRank == "")
+                                    {
+                                        <img src="~/images/hmlogo.png" height="100" width="100" />
+                                        <h4 class="card-title pl-3 mb-0" style="color:#024a54">Welcome to HM Green Associate</h4>
+                                    }
+                                    else
+                                    {
+                                        <img src="@ViewBag.ImageURL" height="100" width="100" />
+                                        <h4 class="card-title pl-3 mb-0" style="color:#024a54">@ViewBag.AchiverRank</h4>
+                                    }
                                 </div>
                             </div>
                         </div>
@@ -350,7 +359,9 @@
         $("#myModal1").modal('hide');
         $("#congratulation").modal('show');
     });
+
 </script>
+
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -420,19 +431,31 @@
 
 </style>
 
-<div class="modal fade" id="congratulation" tabindex="-1" role="dialog"
-     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <img src="@ViewBag.ImageURL" />
-                <h4>@ViewBag.AchiverRank</h4>
+    @if (Model.ImageURL == "null" || Model.ImageURL == "" || Model.AchiverRank == "null" || Model.AchiverRank == "")
+    {
+        <script>
+       $(document).ready(function () {
+        $("#congratulation").modal('hide');
+    });
+
+        </script>
+    }
+    else
+    {
+        <div class="modal fade" id="congratulation" tabindex="-1" role="dialog"
+             aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="@ViewBag.ImageURL" />
+                        <h4>@ViewBag.AchiverRank</h4>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
+    }
