--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -57,7 +57,6 @@
             <section id="dashboard-analytics">
 
 
-                @Html.HiddenFor(m=> m.ImageURL)
                 @*===============================================================================*@
 
                 <div class="row ">
@@ -70,7 +69,7 @@
                                     @if (Model.ImageURL == "null" || Model.ImageURL == "" || Model.AchiverRank == "null" || Model.AchiverRank == "")
                                     {
                                         <img src="~/images/hmlogo.png" height="100" width="100" />
-                                        <h4 class="card-title pl-3 mb-0" style="color:#024a54">Welcome to HM Green Associate</h4>
+                                        <h4 class="card-title pl-3 mb-0" style="color:#024a54">Welcome to HM GREEN CITY</h4>
                                     }
                                     else
                                     {
