--- a/HMGreenCityMLM/Views/Admin/EmpBinaryTree.cshtml
+++ b/HMGreenCityMLM/Views/Admin/EmpBinaryTree.cshtml
@@ -249,6 +249,7 @@
             }
 
     .family-tree li a .outer-ring {
+         background:#055055;
         border: 1px solid #064ffb;
         padding: 5px;
         text-decoration: none;
