--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -55,10 +55,7 @@
         <div class="content-body">
             <!-- Dashboard Analytics Start -->
             <section id="dashboard-analytics">
-
-
                 @*===============================================================================*@
-
                 <div class="row ">
                     <div class="col-xl-12 col-lg-12">
                         <div class="card awardBg">
@@ -80,7 +77,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6">
+                    <div class="col-xl-6 col-lg-6">
                         <div class="card tab1">
                             <div class="card-statistic-3">
                                 <div class="card-icon card-icon-large"><i class=""></i></div>
@@ -91,8 +88,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6">
-                        <div class="card tab2">
+                    <div class="col-xl-6 col-lg-6">
+                        <div class="card tab4">
                             <div class="card-statistic-3">
                                 <div class="card-icon card-icon-large"><i class=""></i></div>
                                 <div class="card-content">
@@ -103,7 +100,7 @@
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-6">
-                        <div class="card tab3">
+                        <div class="card tab1">
                             <div class="card-statistic-3">
                                 <div class="card-icon card-icon-large"><i class=""></i></div>
                                 <div class="card-content">
@@ -114,7 +111,7 @@
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-6">
-                        <div class="card tab4">
+                        <div class="card tab3">
                             <div class="card-statistic-3">
                                 <div class="card-icon card-icon-large"><i class=""></i></div>
                                 <div class="card-content">
@@ -124,14 +121,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
-
-
-
-                <div class="row ">
                     <div class="col-xl-3 col-lg-6">
-                        <div class="card tab4">
+                        <div class="card tab2">
                             <div class="card-statistic-3">
                                 <div class="card-icon card-icon-large"><i class=""></i></div>
                                 <div class="card-content">
@@ -142,7 +133,7 @@
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-6">
-                        <div class="card tab3">
+                        <div class="card tab4">
                             <div class="card-statistic-3">
                                 <div class="card-icon card-icon-large"><i class=""></i></div>
                                 <div class="card-content">
@@ -153,7 +144,7 @@
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-6">
-                        <div class="card tab2">
+                        <div class="card tab4">
                             <div class="card-statistic-3">
                                 <div class="card-icon card-icon-large"><i class=""></i></div>
                                 <div class="card-content">
@@ -164,7 +155,7 @@
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-6">
-                        <div class="card tab1">
+                        <div class="card tab2">
                             <div class="card-statistic-3">
                                 <div class="card-icon card-icon-large"><i class=""></i></div>
                                 <div class="card-content">
@@ -174,9 +165,29 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-xl-3 col-lg-6">
+                        <div class="card tab3">
+                            <div class="card-statistic-3">
+                                <div class="card-icon card-icon-large"><i class=""></i></div>
+                                <div class="card-content">
+                                    <h4 class="card-title">@ViewBag.UpdaidIncome</h4>
+                                    <span class="text-white">UnPaid Income</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-6">
+                        <div class="card tab1">
+                            <div class="card-statistic-3">
+                                <div class="card-icon card-icon-large"><i class=""></i></div>
+                                <div class="card-content">
+                                    <h4 class="card-title">@ViewBag.SelfBusiness </h4>
+                                    <span class="text-white">Self Business</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-
 
                 <div class="row">
                     <div class="col-md-6">
@@ -380,24 +391,18 @@
 
     //copy js
     function copy() {
-        jQuery.noConflict();
         let copyText = document.getElementById("copyClipboard");
         let copySuccess = document.getElementById("copied-success");
         copyText.select();
-        copyText.setSelectionRange(0, 99999);
-        navigator.clipboard.writeText(copyText.value);
-
+        document.execCommand("copy");
         copySuccess.style.opacity = "1";
         setTimeout(function () { copySuccess.style.opacity = "0" }, 5000);
     }
     function copyRight() {
-        jQuery.noConflict();
         let copyTextRight = document.getElementById("copyClipboardRight");
         let copySuccessRight = document.getElementById("copied-successRight");
         copyTextRight.select();
-        copyTextRight.setSelectionRange(0, 99999);
-        navigator.clipboard.writeText(copyTextRight.value);
-
+        document.execCommand("copy");
         copySuccessRight.style.opacity = "1";
         setTimeout(function () { copySuccessRight.style.opacity = "0" }, 5000);
     }
