--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -24,28 +24,29 @@
         background: linear-gradient(to right, #2e1437, #2e1437, #2e1437) !important;
         color: #fff;
     }
-    .awardBg{
+
+    .awardBg {
         background: rgb(76,167,186);
         background: linear-gradient(90deg, rgba(76,167,186,0) 0%, rgba(76,167,186,1) 100%);
     }
-     .copied{
-            font-family: 'Montserrat', sans-serif;
-            width: 80px;
-            opacity: 0;
-            position: absolute;
-            top: 10%;
-            right: 7%;
-            /* margin: auto; */
-            font-weight: 600;
-            color: #000;
-            padding: 7px 12px;
-            background-color: #fff;
-            border-radius: 5px;
-            transition: .4s opacity;
-            z-index:100;
+
+    .copied {
+        font-family: 'Montserrat', sans-serif;
+        width: 80px;
+        opacity: 0;
+        position: absolute;
+        top: 10%;
+        right: 7%;
+        /* margin: auto; */
+        font-weight: 600;
+        color: #000;
+        padding: 7px 12px;
+        background-color: #fff;
+        border-radius: 5px;
+        transition: .4s opacity;
+        z-index: 100;
     }
 </style>
-
 <div class="app-content content">
     <div class="content-overlay"></div>
     <div class="header-navbar-shadow"></div>
@@ -188,7 +189,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group position-relative">
@@ -217,7 +217,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12">
                         <div class="card">
@@ -227,39 +226,34 @@
                             <div class="card-body">
                                 <div class="table-responsive">
                                     <table class="table table-striped table-hover table-bordered" id="tableExport" style="width:100%;">
-                                            <thead>
-                                                <tr>
-                                                    <th>Sr No.</th>
-                                                    <th>Business Type</th>
-                                                    <th>Amount</th>
-                                                    <th>Status</th>
-
-                                                </tr> 
-                                            </thead>
-                                            <tbody>
-                                                @if (Model != null)
+                                        <thead>
+                                            <tr>
+                                                <th>Sr No.</th>
+                                                <th>Business Type</th>
+                                                <th>Amount</th>
+                                                <th>Status</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @if (Model != null)
                                                 {
                                                     if (Model.lstinvestment != null)
                                                     {
                                                         int i = 1;
                                                         foreach (var Item in Model.lstinvestment)
                                                         {
-                                                            <tr class="text-left">
-                                                                <td>@i</td>
-                                                                <td>@Item.ProductName</td>
-                                                                <td>@Item.Amount</td>
-                                                                <td>@Item.Status</td>
-
-
-                                                            </tr>
+                                                <tr class="text-left">
+                                                    <td>@i</td>
+                                                    <td>@Item.ProductName</td>
+                                                    <td>@Item.Amount</td>
+                                                    <td>@Item.Status</td>
+                                                </tr>
                                                             i++;
                                                         }
-
                                                     }
                                                 }
-
-                                            </tbody>
-                                        </table>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
@@ -273,13 +267,12 @@
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table class="table table-striped table-hover table-bordered" id="tableExportsss" style="width:100%;">
+                                    <table class="table table-striped table-hover table-bordered" id="tableExport1" style="width:100%;">
                                         <thead>
                                             <tr>
                                                 <th>Sr No.</th>
                                                 <th>Title</th>
                                                 <th>News</th>
-
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -290,26 +283,21 @@
                                                     int i = 1;
                                                     foreach (var Item in Model.NoticeMasterlist)
                                                     {
-                                                        <tr class="text-left">
-                                                            <td>@i</td>
-                                                            <td>@Item.Title</td>
-                                                            <td>@Item.News</td>
-
-
-                                                        </tr>
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.Title</td>
+                                                <td>@Item.News</td>
+                                            </tr>
                                                         i++;
                                                     }
-
                                                 }
                                             }
-
                                         </tbody>
                                     </table>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                     <div class="col-xl-6 col-lg-6">
                         <div class="card">
                             <div class="card-header">
@@ -317,14 +305,13 @@
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table class="table table-striped table-hover table-bordered" id="tableExportsss" style="width:100%;">
+                                    <table class="table table-striped table-hover table-bordered" id="tableExport2" style="width:100%;">
                                         <thead>
                                             <tr>
                                                 <th>Team</th>
                                                 <th>Total</th>
                                                 <th>Paid</th>
                                                 <th>C/F</th>
-
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -340,7 +327,6 @@
                                                 <td>@ViewBag.PaidBusinessRight</td>
                                                 <td>@ViewBag.CarryRight</td>
                                             </tr>
-
                                         </tbody>
                                     </table>
                                 </div>
@@ -353,7 +339,6 @@
                                 <h4 class="card-title">Current Month Business Details</h4>
                             </div>
                             <div class="card-content">
-
                                 <div class="table-responsive">
                                     <table class="table mb-0" id="example23">
                                         <thead class="thead-dark">
@@ -375,11 +360,9 @@
                     </div>
                 </div>
             </section>
-            
         </div>
     </div>
 </div>
-
 <script src="~/scripts/jquery-1.10.2.js"></script>
 <script>
     $(document).ready(function () {
@@ -387,8 +370,6 @@
         $("#myModal1").modal('hide');
         $("#congratulation").modal('show');
     });
-
-
     //copy js
     function copy() {
         let copyText = document.getElementById("copyClipboard");
@@ -407,7 +388,6 @@
         setTimeout(function () { copySuccessRight.style.opacity = "0" }, 5000);
     }
 </script>
-
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -445,8 +425,7 @@
             </div>
         </div>
     </div>
-</div> 
-
+</div>
 <style>
     @@media (max-width:767px) {
         #congratulation .modal-content {
@@ -477,33 +456,33 @@
 
 </style>
 
-    @if (Model.ImageURL == "null" || Model.ImageURL == "" || Model.AchiverRank == "null" || Model.AchiverRank == "")
-    {
-        <script>
-       $(document).ready(function () {
-        $("#congratulation").modal('hide');
-    });
+@if (Model.ImageURL == "null" || Model.ImageURL == "" || Model.AchiverRank == "null" || Model.AchiverRank == "")
+{
+    <script>
+        $(document).ready(function () {
+            $("#congratulation").modal('hide');
+        });
 
-        </script>
-    }
-    else
-    {
-        <div class="modal fade" id="congratulation" tabindex="-1" role="dialog"
-             aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <img src="@ViewBag.ImageURL" />
-                        <h4>@ViewBag.AchiverRank</h4>
-                    </div>
+    </script>
+}
+else
+{
+    <div class="modal fade" id="congratulation" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="@ViewBag.ImageURL" />
+                    <h4>@ViewBag.AchiverRank</h4>
                 </div>
             </div>
         </div>
-    }
+    </div>
+}
 
 
